--- a/modules/kie-cloud-operator/install
+++ b/modules/kie-cloud-operator/install
@@ -1,6 +1,7 @@
 #!/bin/sh
 
 INSTALL_PKGS="go-toolset"
+OPERATOR_VERSION="1.1.0"
 OPERATOR_PATH=/usr/local/bin/kie-cloud-operator
 UI_PATH=/usr/local/bin/console-cr-form
 
