--- a/modules/kie-cloud-operator/install
+++ b/modules/kie-cloud-operator/install
@@ -11,6 +11,7 @@ REPO=kie-cloud-operator
 GHORG=github.com/kiegroup
 GHFULL=${GHORG}/${REPO}
 GOPATH=$(go env GOPATH)
+GOCACHE=$(go env GOCACHE)
 go version
 
 mkdir -p ${GOPATH}/src/${GHFULL}
@@ -39,4 +40,4 @@ mv deploy/crds/kieapp.crd.yaml /manifests
 yum -y autoremove ${INSTALL_PKGS}
 yum -y update-minimal --setopt=tsflags=nodocs --security --sec-severity=Important --sec-severity=Critical
 yum clean all
-rm -rf /var/cache/yum ${GOPATH}
+rm -rf /var/cache/yum ${GOPATH} ${GOCACHE}
