--- a/modules/kie-cloud-operator/install
+++ b/modules/kie-cloud-operator/install
@@ -1,7 +1,6 @@
 #!/bin/sh
 
 INSTALL_PKGS="go-toolset-1.11.*"
-OPERATOR_VERSION="1.2.1"
 OPERATOR_PATH=/usr/local/bin/kie-cloud-operator
 UI_PATH=/usr/local/bin/console-cr-form
 
@@ -33,8 +32,7 @@ if [[ ! -f ${UI_PATH} ]] ; then
 fi
 
 mv build/bin/* /usr/local/bin/
-mv deploy/catalog_resources/redhat/${OPERATOR_VERSION} /manifests
-mv deploy/crds/kieapp.crd.yaml /manifests
+mv deploy/catalog_resources/redhat /manifests
 /usr/local/bin/user_setup
 
 yum -y autoremove ${INSTALL_PKGS}
