--- a/modules/kie-cloud-operator/install
+++ b/modules/kie-cloud-operator/install
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-INSTALL_PKGS="go-toolset-1.11.*"
+INSTALL_PKGS="rsync go-toolset-1.11.*"
 OPERATOR_PATH=/usr/local/bin/kie-cloud-operator
 UI_PATH=/usr/local/bin/console-cr-form
 
@@ -32,7 +32,7 @@ if [[ ! -f ${UI_PATH} ]] ; then
 fi
 
 mv build/bin/* /usr/local/bin/
-cp -r deploy/catalog_resources/redhat /manifests
+rsync -arL deploy/catalog_resources/redhat/ /manifests
 /usr/local/bin/user_setup
 
 yum -y autoremove ${INSTALL_PKGS}
