KIECLOUD-659 - Add nightly build for ba-operator /2
Signed-off-by: Davide Salerno <dsalerno@redhat.com>

--- a/modules/builder-prod/install
+++ b/modules/builder-prod/install
@@ -3,7 +3,9 @@
 go version
 export GOFLAGS=-mod=vendor
 
-OPERATOR_PATH=/usr/local/bin/kie-cloud-operator
+if [[ -z "$OPERATOR_PATH" ]] ; then
+    OPERATOR_PATH=/usr/local/bin/kie-cloud-operator
+fi
 UI_PATH=/usr/local/bin/console-cr-form
 
 cd $REMOTE_SOURCE_DIR/app && pwd
